tests/org.eclipse.php.core.tests/workspace/errors/unfinishedClassDecl5.pdtt
--TEST--
Test unfinished class declaration error reporting
--FILE--
<?php
class A extends B, {}
?>
--EXPECT--
[line=2, start=23, end=24] syntax error, unexpected ',', expecting '{'